# crypto-intel-gather

./: .gitignore  Cargo.toml  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml
configs/: config.toml.example
docs/: CONTAINERIZED_MIGRATIONS.md  PHASE1.md  ROADMAP.md
documentation/: MIGRATIONS_README.md  PHASE1.md  ROADMAP.md
migrations/: 20240101000001_create_wallets_table.sql  20240101000002_create_transactions_table.sql  20240101000003_create_market_data_table.sql  20240101000004_create_alerts_table.sql  20240101000005_create_continuous_aggregates.sql  20240101000006_create_triggers.sql  examples.sql
scripts/: dev-setup.sh  setup-db-sqlx.sh  setup-db.sh
