[package]
name = "crypto-intel-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance crypto forensics backend built with Rust, Alloy, and TimescaleDB"
license = "MIT"
repository = "https://github.com/your-org/crypto-intel-rust"
keywords = ["crypto", "blockchain", "forensics", "ethereum", "timescaledb"]
categories = ["web-programming", "database", "cryptography"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Configuration
config = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Alloy for EVM interactions (replaces Etherscan/Alchemy APIs)
alloy = { version = "0.1", features = ["full"] }
alloy-primitives = "0.1"
alloy-json-abi = "0.1"
alloy-sol-types = "0.1"
alloy-providers = "0.1"
alloy-rpc-client = "0.1"

# Utilities
hex = "0.4"
base64 = "0.21"

# Web framework (optional, for API endpoints)
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Metrics
prometheus = "0.13"
prometheus-client = "0.22"

# Rate limiting
governor = "0.6"

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
testcontainers = "0.15"
testcontainers-modules = { version = "0.7", features = ["postgres"] }

[features]
default = ["api"]
api = ["axum", "tower", "tower-http"]
metrics = ["prometheus", "prometheus-client"]

[[bin]]
name = "crypto-intel-rust"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 